fixing first place section on mobile

--- a/leaderboard.css
+++ b/leaderboard.css
@@ -242,4 +242,20 @@ body{
     margin-left:3vw; 
 }
 
+@media screen and (max-width: 420px){
+    .Place1{
+        border-radius: 40px;
+        border: 5px solid #000;
+        display:flex;
+        margin-left:28vw; 
+        margin-top:-10vh; 
+        width:8.0625rem;
+        height: 2.875rem;
+        display:flex; 
+        text-align: center;
+        flex-shrink:0; 
+        position:absolute; 
+      }
+}
+
 
